Migrate Sparc Engine stuff to Sparc.Engine.Client project

--- a/Sparc2/Sparc2/Catalog/ProductInfo.razor
+++ b/Sparc2/Sparc2/Catalog/ProductInfo.razor
@@ -61,7 +61,7 @@
     string creditsClass = "";
     bool showFullDescription;
 
-    string PageClass (string page)
+    string PageClass(string? page)
     {
         var pageClass = page switch
         {
