--- a/Sparc2/Sparc2/Donations/AddDonation.razor
+++ b/Sparc2/Sparc2/Donations/AddDonation.razor
@@ -2,7 +2,7 @@
 @inject IJSRuntime JS
 @inject NavigationManager NavManager
 @using System.ComponentModel.DataAnnotations
-@using Sparc.Blossom.Billing
+@using Sparc.Engine.Billing
 
 
 @implements IDisposable
@@ -79,6 +79,7 @@ else if (CurrentStep == 1 && string.IsNullOrEmpty(_clientSecret))
     <button type="button" class="btn btn-secondary" @onclick="GoBack">Back</button>
 }
 
+@inject ISparcBilling Billing
 @code {
     [Parameter] public int CurrentStep { get; set; }
     [Parameter] public EventCallback OnNext { get; set; }
@@ -259,7 +260,7 @@ else if (CurrentStep == 1 && string.IsNullOrEmpty(_clientSecret))
                 setupFutureUsage
             );
 
-            var intent = await SparcEngine.CreateOrderPaymentAsync(request);
+            var intent = await Billing.CreateOrderPaymentAsync(request);
 
             _clientSecret = intent.ClientSecret;
             Console.WriteLine($"PaymentIntent created. ClientSecret obtained: {!string.IsNullOrEmpty(_clientSecret)}");
