Sparc2 build fix

--- a/Sparc2/Sparc2/Catalog/ProductPurchase.razor
+++ b/Sparc2/Sparc2/Catalog/ProductPurchase.razor
@@ -1,4 +1,5 @@
 ﻿@using Sparc.Blossom.Authentication
+@using Sparc.Engine
 @using Sparc.Engine.Aura
 @using Sparc.Engine.Billing
 @using System.Globalization
