Implement new currency handling system in Sparc2
This commit introduces a comprehensive currency management system within the Sparc2 application. Key changes include the addition of the `SparcCurrency` and `UserPrice` classes for better currency representation, updates to the `GetProductResponse` record to use `decimal` for prices, and enhancements to product display logic in `Catalog.razor` and `ProductInfo.razor`. The `Product` class is refactored to include credits, and the purchase process is updated to utilize the new `SparcOrder` class. Additionally, the API interface `ISparcBilling` is modified to support optional currency parameters, and various CSS files are updated for improved styling. General code cleanup has also been performed for better maintainability.

--- a/Sparc2/Sparc2/Catalog/Catalog.razor
+++ b/Sparc2/Sparc2/Catalog/Catalog.razor
@@ -37,11 +37,15 @@
     protected override async Task OnInitializedAsync()
     {
         var allProducts = await Api.Products.GetAllProducts();
-
-        Products = allProducts;
-        if (Products != null)
+        if (allProducts.Count() == 1)
+            Nav.NavigateTo($"/catalog/{allProducts.First().Id}");
+        else
         {
-            ActiveProduct = Products.FirstOrDefault();
+            Products = allProducts;
+            if (Products != null)
+            {
+                ActiveProduct = Products.FirstOrDefault();
+            }
         }
     }
 
