--- a/Sparc2/Sparc2/Catalog/Purchase/ProductPurchaseStripeForm.razor
+++ b/Sparc2/Sparc2/Catalog/Purchase/ProductPurchaseStripeForm.razor
@@ -9,7 +9,7 @@
 
 @inject IConfiguration Configuration
 @code {
-    [Parameter] public CreateOrderRequest Order { get; set; } = default!;
+    [Parameter] public SparcOrder Order { get; set; } = default!;
 
     private string? _clientSecret;
     private string? _publishableKey;
