--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -37,7 +37,7 @@
          // gsap code here!
         });
     </script>
-    <script type="module" src="https://localhost:7185/tovik.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/kute.js/2.0.0/kute.min.js"></script>
+@*     <script type="module" src="https://localhost:7185/tovik.js"></script>
+ *@    <script src="https://cdnjs.cloudflare.com/ajax/libs/kute.js/2.0.0/kute.min.js"></script>
 </body>
 </html>
