--- a/Sparc2/Sparc2/Catalog/Purchase/ProductPurchaseStripeForm.razor
+++ b/Sparc2/Sparc2/Catalog/Purchase/ProductPurchaseStripeForm.razor
@@ -26,6 +26,7 @@
         try
         {
             var intent = await Billing.StartCheckoutAsync(Order);
+            Order.PaymentIntentId = intent.PaymentIntentId;
 
             StateHasChanged();
 
