--- a/Sparc2/Sparc2/Catalog/ProductPurchase.razor
+++ b/Sparc2/Sparc2/Catalog/ProductPurchase.razor
@@ -26,7 +26,7 @@
 
 @inject ISparcAura Aura
 @code {
-    [Parameter] public Product? Product { get; set; }
+    [Parameter] public required Product Product { get; set; }
 
     BlossomUser? CurrentUser;
     SparcOrder Order = new SparcOrder();
@@ -41,6 +41,7 @@
     protected override async Task OnInitializedAsync()
     {
         CurrentUser = await Aura.UserInfo();
+        Order.ProductId = Product.StripeProductId!;
 
         if (string.IsNullOrWhiteSpace(Order.Email) && !string.IsNullOrWhiteSpace(Email))
         {
