Move Tovik TS to Tovik project

--- a/Sparc2/Sparc2/Catalog/Purchase/ProductPurchasePayment.razor
+++ b/Sparc2/Sparc2/Catalog/Purchase/ProductPurchasePayment.razor
@@ -24,7 +24,7 @@
     List<SparcCurrency> Currencies = [];
     SparcCurrency? SelectedCurrency;
 
-    protected override async Task OnParametersSetAsync()
+    protected override async Task OnInitializedAsync()
     {
         if (!Currencies.Any())
             Currencies = await Billing.GetCurrenciesAsync();
