Redirect to catalog page instead

--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -27,8 +27,8 @@
                         <h5>Pages</h5>
                         <a id="about-btn" class="button secondary-btn" @onclick='() => Nav.NavigateTo("/about")'>About Us</a>
                         <a id="catalog-btn" class="button secondary-btn" @onclick='() => Nav.NavigateTo("/catalog")'>Catalog</a>
-                        <a id="ideas-btn" class="button secondary-btn" @onclick='() => Nav.NavigateTo("/ideas")'>Ideas</a>
-                        @* <Auth /> *@
+@*                         <a id="ideas-btn" class="button secondary-btn" @onclick='() => Nav.NavigateTo("/ideas")'>Ideas</a>
+ *@                        @* <Auth /> *@
                     </div>
                     <hr />
                     <div class="menu-profile">
